# linefold

./: ChangeLog  Makefile.am  README  README.linebreak  TODO  autogen.sh  configure.in  linebreakrule.html  mklbproptab.py  unicode_linebreak.c  unicode_linebreak.h  unicode_linebreaktab.c  unicode_linebreaktab.h
LineBreak/: AmbiguousWidth.py  CharacterProperties.py  Rules.py  Utils.py  __init__.py
include/: common.h  linefold.h.in  linefoldtab.h
lib/: linefold.c  linefoldtab.c
src/: iconv_wrap.c  main.c  option.c  strerror.c
tests/: test-linebreak.c  testdata.txt
